--- a/style.css
+++ b/style.css
@@ -1,3 +1,109 @@
-body{
+.personal-name {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.cv-header {
+    background-color: rgb(118, 118, 207);
+    padding: 10px 0 10px 0;
+    text-align: center;
+    display: flex;
+}
+
+.cv-header-left-part {
+    width: 90%;
+    float: left;
+    text-align: center;
+}
+
+.cv-header-right-part {
+    float: right;
+}
+
+.main li {
+    list-style-type: none;
+}
+
+
+.item {
+    margin-top: 5px;
+    font-size: 20px;   
+}
+
+.item a {
+    color: #03058a;
+}
+
+.content {
+    margin: 10px 20px 0 20px;
+}
+
+.left-part {
+    width: 70%;
+    float: left;
+    margin-right: 3%;
+}
+
+.right-part {
+    width: 27%;
+    float: left;
+}
+
+.block {
+    margin: 20px 0 20px 0;
+}
+
+.block-header {
+    border-bottom: 3px solid #03058a;
+    font-size: 24px;
+}
+
+.block-content-header {
+    margin: 20px 0 20px 0;
+    font-weight: 600;
+}
+
+.block-content-header-time {
+    float: right;
+}
+
+.block-content-body {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+}
+
+.cv-photo {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.cv-photo img {
+    width: 300px;
+}
+
+.block-content-body li {
+    margin: 10px 0 10px 0;
+}
+
+.code-sample {
+    font-size: 20px;
+}
+
+.main a {
+    text-decoration: none;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-transform: uppercase;
+}
+
+.list {
+    float: right;
+}
+
+footer {
+    width: 100%;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
 }
